CKA-CKS-CKAD/ingress/ingress1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.local
      http:
        paths:
          - path: /nginx
            backend:
              serviceName: nginx-lb
              servicePort: 80
          - path: /whoami
            backend:
              serviceName: whoami-lb
              servicePort: 80
